# exp_app

./: pyproject.toml
app/: .env-dev  main.py
app/api/api_v1/categories/: models.py  router.py  schemas.py  service.py
app/api/api_v1/core/: database.py  services.py  settings.py
